# tauri-plugin-google-admob

./: .gitignore  Cargo.toml  README.md  build.rs  package.json  pnpm-lock.yaml
android/: build.gradle.kts
android/src/androidTest/java/: ExampleInstrumentedTest.kt
android/src/main/: AndroidManifest.xml
android/src/main/java/: AdmobPlugin.kt
android/src/test/java/: ExampleUnitTest.kt
guest-js/: index.ts
ios/: Package.swift
ios/Sources/: AdmobPlugin.swift
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: google-admob.toml  prepare_app_open.toml  prepare_interstitial.toml  prepare_rewarded.toml  prepare_rewarded_interstitial.toml  show_app_open.toml  show_interstitial.toml  show_rewarded.toml  show_rewarded_interstitial.toml
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
